--- a/Assets/Code/Scripts/Gameplay/EscapeRoom.Gameplay.asmdef
+++ b/Assets/Code/Scripts/Gameplay/EscapeRoom.Gameplay.asmdef
@@ -5,7 +5,8 @@
         "GUID:fe685ec1767f73d42b749ea8045bfe43",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:dc960734dc080426fa6612f1c5fe95f3",
-        "GUID:1799f757984513841bdcb0a39fe5feca"
+        "GUID:1799f757984513841bdcb0a39fe5feca",
+        "GUID:ee1e9b96634037d45bdafb8db962aa74"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
